--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -4,6 +4,7 @@
 @import "parts/bookings.css";
 @import "parts/chat-room.css";
 @import "parts/client_payments.css";
+@import "parts/client-event-details.css";
 @import "parts/comingsoon.css";
 @import "parts/enquiries.css";
 @import "parts/footer.css";
