add logic for skipping empty performances

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -251,7 +251,7 @@
             var serviceAmount = new Number(servicePrice.amount).toFixed();
         }
 
-        if (type == 'performance' && curPerf.type != basePerformanceType) {
+        if ((type == 'performance' && curPerf.type != basePerformanceType) || curPerf.packages == 'undefined') {
             continue;
         }
 
