fix showing duration in extra performances

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -405,7 +405,7 @@
                             %>
                         </select>
                         <span>x</span>
-                        <input type="number" quot-edit-duration name="duration" min="1" max="100" class="duration-select extra">
+                        <input type="number" quot-edit-duration name="duration" min="1" max="100" class="duration-select extra" value="<%=option.duration%>">
                         <span>min</span>
                     </span>
 
