fix changing type / change layout - add percent to payments

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -451,7 +451,7 @@
     </div>
 
     <div class="row payment-deposit-info">
-        <span class="payment-deposit-amount"><%=balancePercent%></span><span> guaranteed Balance payment on <b>Escrow Account</b></span>
+        <span class="payment-deposit-amount"><%=balancePercent%>%</span><span> guaranteed Balance payment on <b>Escrow Account</b></span>
     </div>
 
     <div style="text-align: center;">
