Change deposit percents so they always should be 100% in sum. and they should be 20,30,50 percents. / Change Qutation Send button to Edit Quatation / Default value of price for extra performance and services custom should be 0.

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -70,8 +70,8 @@
                     <div class="controls">
                         {% if chat.event.published_request is defined and chat.event.published_request %}
                             <div class="button-gradient filled">
-                                <button type="button" class="btn register quotationSendbtn" event-id="{{ chat.event.id }}">Quotation sent</button>
-                            </div>  
+                                <button type="button" class="btn register quotationSendbtn" event-id="{{ chat.event.id }}">Edit Quotation</button>
+                            </div>
                         {% else %}
                             <div class="button-gradient filled">
                                 <button type="button" class="btn register quotationSendbtn" event-id="{{ chat.event.id }}">Send Quotation</button>
