added technical requirements integration

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -206,6 +206,7 @@
                     <script>
                         //TODO: mode outside Vue template
                         window.chatMessages = []
+                        window.artistId = "{{ chatRoom.artist.artist.id }}"
                     </script>
                     {% for chatMessage in chat.message |reverse %}
                         <script>
