--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/freeQuote.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/freeQuote.css
@@ -25,14 +25,14 @@
 }
 
 .free-quote-modal .modal-content .close > span {
-    /*color: #959595;*/
-    background: url('../../assets/images/cross.png') no-repeat;
-    height: 20px;
-    margin: -13px 0 0 -12px;
+    background: url(../../assets/images/cross.png) no-repeat;
+    height: 18px;
+    margin: -9px -9px;
     position: absolute;
     left: 50%;
     top: 50%;
-    width: 20px;
+    width: 18px;
+    background-size: cover;
 }
 
 .free-quote-modal .modal-header {
@@ -69,7 +69,7 @@
 .free-quote-modal .modal-title {
     font-family: LatoBold;
     font-size: 14px;
-    padding: 9px 0 9px 39px;
+    padding: 9px 0 9px 0px;
     line-height: 1.2;
 }
 .free-quote-modal .additional_info_input {
@@ -98,6 +98,8 @@
     margin-left: 10px;
     font-size: 14px;
     color: white;
+    float: right;
+    padding-top: 2px;
 }
 
 .free-quote-modal.modal-registered .quote-box a{
@@ -166,7 +168,7 @@
     background: white!important;
 }
 .free-quote-modal select.select_width_101 {
-    width: 101%;
+    width: 100%;
 }
 
 .free-quote-modal .select2-container--default .select2-selection--single,
@@ -220,9 +222,23 @@
     padding-left: 15px;
 }
 
-.free-quote-modal .profile-categories .custom-checkbox {
-    margin-bottom: 8px;
-    margin-right: 4px;
+.free-quote-modal .profile-categories .custom-checkbox label:before {
+    height: 19px;
+    width: 20px;
+    border-radius: 4px;
+    vertical-align: initial;
+}
+
+.free-quote-modal .profile-categories .custom-checkbox label:after {
+    margin: 6px 5px;
+    left: 3px;
+    top: -2px;
+    width: 5px;
+    height: 9px;
+    border: solid rgb(255,173,108);
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+
 }
 
 .free-quote-modal .profile-categories .custom-checkbox label:before {
@@ -256,7 +272,8 @@
 
 .free-quote-modal .quote-profile-info h2 {
     font-size: 18px;
-    font-family: UbuntuMedium;
+    font-family: Ubuntu;
+    font-weight: 500;
     color: #3d4248;
     margin: 4px 0 3px;
 }
@@ -341,7 +358,7 @@
 }
 .free-quote-modal select {
     border-radius: 6px;
-    margin-left: -3.5px;
+    margin-left: 0;
     padding-left: 11px;
     background-position: calc(100% - 14px) 12px, calc(100% - 9px) 12px, 100% 0;
     outline: none;
@@ -354,6 +371,7 @@
 h4.eventChooseRequest select {
     background-position: calc(100% - 14px) 9px, calc(100% - 9px) 9px, 100% 0;
     border: 0px solid transparent;
+    width: calc(100% - 140px);
 }
 h4.eventChooseRequest select:active {
     background-position: calc(100% - 14px) 7px, calc(100% - 9px) 7px, 100% 0;
@@ -425,9 +443,7 @@ h4.eventChooseRequest select:active {
 .free-quote-modal.request .modal-header h3{
     color: #3d4248;
     color: rgba(61, 66, 72, .87);
-    font-family: Ubuntu;
-    font-weight: 600;
-    font-size: 22px;
+    font: 22px UbuntuBold, Serif, sans-serif;
 }
 .free-quote-modal.request .title{
     font: 15px LatoBold, Serif, sans-serif;
@@ -865,7 +881,7 @@ h4.eventChooseRequest select:active {
     }
 
     .free-quote-modal .modal-title {
-        padding: 10px 40px 5px 30px;
+        /*        padding: 10px 40px 5px 30px;*/
         font-size: 13px;
         font-family: "LatoRegular";
     }
@@ -930,9 +946,6 @@ h4.eventChooseRequest select:active {
         float: none;
         margin-bottom: 10px;
     }
-    h4.eventChooseRequest select {
-        max-width: 150px;
-    }
     .quote-section .price-list .col:first-child,
     .quote-section .price-list .col{
         width: 100%;
@@ -989,13 +1002,6 @@ h4.eventChooseRequest select:active {
         margin-bottom: 5px;
         margin-right: 4px;
     }
-    .free-quote-modal .modal-title .warn {
-        height: 16px;
-        width: 16px;
-        top: 22px;
-        left: 14px;
-        position: absolute;
-    }
     .free-quote-modal .add-comment-btn {
         margin-top: 16px;
         padding-left: 2px;
@@ -1030,9 +1036,9 @@ h4.eventChooseRequest select:active {
     .free-quote-modal.request #interest + .select2{margin-top: 10px;}
     .free-quote-modal.request .col-2 .button-gradient{margin: 0 2px;}
     .free-quote-modal.request .col-2 .button-gradient .btn{font-size: 14px !important;}
-
-    .free-quote-modal .modal-header {
-        padding: 2px;
+    .free-quote-modal .modal-title .warn {
+        height: 18px;
+        width: 18px;
     }
     .free-quote-modal .modal-body {
         padding: 12px 0 8px;
@@ -1041,9 +1047,6 @@ h4.eventChooseRequest select:active {
         margin-bottom: 10px;
         padding-left: 16px;
         padding-right: 15px;
-    }
-    .free-quote-modal .modal-header {
-        padding: 0px;
     }
     .free-quote-modal .form-group label {
         margin-left: 4px;
@@ -1062,11 +1065,6 @@ h4.eventChooseRequest select:active {
         margin-right: 10px;
     }
     .free-quote-modal .modal-title {
-        padding: 9px 0 9px 39px;
-        line-height: 1.2;
-    }
-    .free-quote-modal .eventChooseRequest {
-        padding: 9px 0 9px 10px;
         line-height: 1.2;
     }
     .free-quote-modal .popup_artist_info {
@@ -1075,13 +1073,6 @@ h4.eventChooseRequest select:active {
     .free-quote-modal .profile-categories .custom-checkbox {
         margin-bottom: 5px;
         margin-right: 4px;
-    }
-    .free-quote-modal .modal-title .warn {
-        height: 16px;
-        width: 16px;
-        top: 15px;
-        left: 14px;
-        position: absolute;
     }
     .free-quote-modal .add-comment-btn {
         margin-top: 16px;
