--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/feedbacksSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/feedbacksSection.html.twig
@@ -9,9 +9,11 @@
 
             <div class="pull-right">
                 <span>{{ feedback.createdAt | date('d F Y') }}</span>
+                {% if app.user is defined %}
                 {% if app.user.roles[0] == "ROLE_ADMIN"  %}
                     <span><i class="fa fa-trash remove-feedback"></i></span>
                {% endif  %}
+                {% endif %}
             </div>
         </div>
         <div class="row">
